# docs/swagger.yaml
@@ -59,6 +59,12 @@ components:
         error:
           $ref: '#/components/schemas/gorouter.ErrorInfo'
       type: object
+  securitySchemes:
+    bearer:
+      description: JWT authorization header. Use Bearer <token>.
+      in: header
+      name: Authorization
+      type: apiKey
 externalDocs:
   description: ""
   url: ""
@@ -103,6 +109,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/gorouter.ErrorResponse'
           description: Internal Server Error
+      security:
+      - bearer: []
       summary: List reports
       tags:
       - reports
@@ -141,6 +149,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/gorouter.ErrorResponse'
           description: Internal Server Error
+      security:
+      - bearer: []
       summary: Create basic report
       tags:
       - reports
